# osmo-tetra

./: README  README.md  TODO
contrib/: jenkins.sh
dmo-tests/: Makefile  defs.h  main.c  pi4cxpsk.c  pi4cxpsk.h
etsi_codec-patches/: README  README_sq5bpf  build_as_32bit.patch  codec.diff  link_static.patch  makefile-cleanups.patch  series  stdint-types.patch
src/: .gitignore  Makefile  conv_enc_test.c  crc_test.c  float_to_bits.c  osmo_prim.h  receiver1  receiver1udp  receiver2  startme.sh  testpdu.c  testpdu.h  testsds.c  tetra-rx-tests.sh  tetra-rx.c  tetra_cmce_pdu.c  tetra_common.c  tetra_common.h  tetra_gsmtap.c  tetra_gsmtap.h  tetra_llc.c  tetra_llc_pdu.c  tetra_llc_pdu.h  tetra_mac_pdu.c  tetra_mac_pdu.h  tetra_mle.c  tetra_mle_pdu.c  tetra_mle_pdu.h  (+14 more)
src/demod/: .gitignore  Makefile.am  Makefile.common  configure.ac  cqpsk.py  fcdp-tetra_demod.py  fcdp-tetra_demod_fft.py  osmosdr-tetra_demod_fft.py  simdemod2.py  simdemod3.grc  simdemod3.py  telive_1ch_simple_gr310_udp.grc  telive_1ch_simple_gr310_udp.py
src/demod/config/: Makefile.am
src/demod/grc/: Makefile.am  tetra_demod_qpsk.xml
src/demod/python/: __init__.py  cqpsk.py  fcdp-tetra_demod.py  fcdp-tetra_demod_fft.py  osmosdr-tetra_demod_fft.py  rtlsdr-tetra_demod_fft.py  tetra-demod.py  uhd-tetra_demod.py  usrp1-tetra_demod.py
src/demod/python-3.6/: cqpsk.py  osmosdr-tetra_demod_fft.py  simdemod2.py  usrp1-tetra_demod.py  usrp2-tetra_demod.py
src/demod/python-3.7/: Makefile.am  cqpsk.py  fcdp-tetra_demod.py  fcdp-tetra_demod_fft.py  osmosdr-tetra_demod_fft.py  simdemod2.py  tetra-demod.py  uhd-tetra_demod.py  usrp1-tetra_demod.py  usrp2-tetra_demod.py
(+14 files in other folders)
